--- a/journal/modernized/01-preface.adoc
+++ b/journal/modernized/01-preface.adoc
@@ -1,12 +1,12 @@
 == Preface
 
+[verse]
+____
 "`How blest is the child of the Lord,
-
 When taught by his Father to run,
-
 When led by the light of His Word,
-
 And cheered by the beams of His Sun.`"
+____
 
 The truth of this was exhibited, in a remarkable degree, by the child of the Lord,
 a memoir of whose state and daily walk is now
